--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolzap</title>
+    <!-- font awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +16,13 @@
 </head>
 
 <body>
+    <!--div per background body  -->
+    <div class="body-top"></div>
+    <div class="app">
+        <!-- div contenitore applicativo  -->
+        <div class="big-container"></div>
+    </div>
+
     <!-- vue js  -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <!-- javascript  -->
