--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -20,7 +20,10 @@
     <div class="body-top"></div>
     <div class="app">
         <!-- div contenitore applicativo  -->
-        <div class="big-container"></div>
+        <div class="big-container">
+            <div class="left-side"></div>
+            <div class="right-side"></div>
+        </div>
     </div>
 
     <!-- vue js  -->
