--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -18,10 +18,35 @@
 <body>
     <!--div per background body  -->
     <div class="body-top"></div>
-    <div class="app">
+    <div id="app" v-cloak>
         <!-- div contenitore applicativo  -->
-        <div class="big-container">
-            <div class="left-side"></div>
+        <div class="big-container flex">
+            <!-- Parte sinistra con chat  -->
+            <div class="left-side">
+                <!-- header parte sinistra  -->
+                <header class="left-header flex">
+                    <div class="user-container flex">
+                        <div class="round-container">
+                            <a href="http://"><img :src="myInfo.avatar" alt="myInfo.name"></a>
+                        </div>
+                        <span>{{`${myInfo.name} ${myInfo.lastName}`}}</span>
+                    </div>
+                    <!-- container con lista icone  -->
+                    <div class="icon-container flex">
+                        <ul class="flex">
+                            <li>
+                                <a href="http://#"><i class="fa-solid fa-circle-notch"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://"><i class="fa-solid fa-message"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </header>
+            </div>
             <div class="right-side"></div>
         </div>
     </div>
