feat: search bar

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -47,6 +47,7 @@
                     </div>
                 </header>
                 <main>
+                    <!-- notifiche  -->
                     <div class="notifications flex">
                         <div class="round-container flex bell-container">
                             <i class="fa-solid fa-bell-slash"></i>
@@ -56,7 +57,13 @@
                             <p class="small-grey notifications-on">Attiva notifiche desktop</p>
                         </div>
                     </div>
-                    <div class="search-chat"></div>
+                    <!-- barra di ricerca -->
+                    <div class="search-chat">
+                        <div class="search-bar flex">
+                            <button type="submit"><i class="fas fa-search"></i></button>
+                            <input type="text" placeholder="Cerca o inizia nuova chat">
+                        </div>
+                    </div>
                     <div class="chats"></div>
                 </main>
             </div>
