--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boolzap</title>
+    <title>Boolzapp</title>
     <!-- font awesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <!-- google font  -->
@@ -21,7 +21,7 @@
     <div id="app" v-cloak>
         <!-- div contenitore applicativo  -->
         <div class="big-container flex">
-            <!-- Parte sinistra con chat  -->
+            <!-- Parte sinistra con contatti chat  -->
             <div class="left-side flex">
                 <!-- header parte sinistra  -->
                 <header class="left-header flex">
@@ -77,7 +77,36 @@
                     </div>
                 </main>
             </div>
-            <div class="right-side"></div>
+            <!-- Parte destra con chat  -->
+            <div class="right-side flex">
+                <!-- header con chat attiva  -->
+                <header class="right-header flex">
+                    <div class="user-container flex">
+                        <div class="round-container">
+                            <a href="http://"><img :src="contacts[0].avatar" alt="contacts[0].name"></a>
+                        </div>
+                        <div>
+                            <span class="font-bold">{{ contacts[0].name }}</span>
+                            <p class="small-grey">Ultimo accesso oggi alle</p>
+                        </div>
+                    </div>
+                    <div class="icon-container flex">
+                        <ul class="flex">
+                            <li>
+                                <a href="http://#"><i class="fas fa-search"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://"><i class="fa-solid fa-paperclip"></i></a>
+                            </li>
+                            <li>
+                                <a href="http://"><i class="fa-solid fa-ellipsis-vertical"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </header>
+                <main></main>
+                <footer></footer>
+            </div>
         </div>
     </div>
 
