--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -109,7 +109,8 @@
                     </div>
                 </header>
                 <!-- main  -->
-                <main></main>
+                <main class="flex">
+                </main>
                 <!-- footer  -->
                 <footer class="flex">
                     <!-- footer left  -->
