fix: body background

--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -15,9 +15,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="flex">
     <!--div per background body  -->
-    <div class="body-top"></div>
     <div id="app" v-cloak>
         <!-- div contenitore applicativo  -->
         <div class="big-container flex">
