--- a/mlestone5/index.html
+++ b/mlestone5/index.html
@@ -116,18 +116,18 @@
                 </header>
                 <!-- main  -->
                 <main class="flex">
-                    <div class="message flex" v-for="message in searchedChat()[currentIndex].messages"
-                        :class="message.status === 'received' ? 'received' : 'sent'" @mouseover="changeArrowStatus"
-                        @mouseleave="arrowHidden">
+                    <div class="message flex" v-for="(message, index) in searchedChat()[currentIndex].messages"
+                        :class="message.status === 'received' ? 'received' : 'sent'"
+                        @mouseover="changeArrowStatus(message)" @mouseleave="arrowHidden(message)">
                         <div class="message-text">{{message.message}}</div>
                         <div class="date">
-                            <div class="arrow" :class="arrowStatus"><i class="fa-solid fa-angle-down"
-                                    @click="showMenu"></i></div>
-                            <div class="message-menu" :class="menuStatus">
+                            <div class="arrow" :class="message.arrowStatus"><i class="fa-solid fa-angle-down"
+                                    @click="showMenu(message)"></i></div>
+                            <div class="message-menu" :class="message.menuStatus">
                                 <div>
                                     <p>message info</p>
                                 </div>
-                                <div class="delete">
+                                <div class="delete" @click="deleteMessage(index)">
                                     <p>delete message</p>
                                 </div>
                             </div>
